force-app/main/default/objects/Authorization__c/Authorization__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Authorization</label>
</CustomObject>