force-app/main/default/objects/Authorization__c/fields/BPCreationURL__c.field-meta.xml
<CustomField>
    <fullName>BPCreationURL__c</fullName>
    <description>Contains the endpoint for creation of BP &amp; CP in SAP from Salesforce Lead data</description>
    <label>BPCreationURL</label>
    <type>Url</type>
</CustomField>