force-app/main/default/objects/Authorization__c/fields/BPUpdateURL1__c.field-meta.xml
<CustomField>
    <fullName>BPUpdateURL1__c</fullName>
    <description>URL for updating BP details in SAP side from Salesforce for regular fields and extension of Sales Area</description>
    <label>BPUpdateURL1</label>
    <type>Url</type>
</CustomField>