force-app/main/default/objects/Authorization__c/fields/BPUpdateURL2__c.field-meta.xml
<CustomField>
    <fullName>BPUpdateURL2__c</fullName>
    <description>URL for updating BP of SAP side from Salesforce for special fields : PAN no, TAN no, Pricing &amp; Customer Statistics Group</description>
    <label>BPUpdateURL2</label>
    <type>Url</type>
</CustomField>