force-app/main/default/objects/Authorization__c/fields/ContactUpdateURL__c.field-meta.xml
<CustomField>
    <fullName>ContactUpdateURL__c</fullName>
    <description>URL for updating data of CP of SAP from Contact object in Salesforce</description>
    <label>ContactUpdateURL</label>
    <type>Url</type>
</CustomField>