force-app/main/default/objects/Authorization__c/fields/CustomerLedgerURL__c.field-meta.xml
<CustomField>
    <fullName>CustomerLedgerURL__c</fullName>
    <description>URL for receiving Customer Ledger data from SAP side</description>
    <label>CustomerLedgerURL</label>
    <type>Url</type>
</CustomField>