force-app/main/default/objects/Authorization__c/fields/CustomerOutstandingURL__c.field-meta.xml
<CustomField>
    <fullName>CustomerOutstandingURL__c</fullName>
    <description>URL for receiving Customer Outstanding data from SAP side to Salesforce</description>
    <label>CustomerOutstandingURL</label>
    <type>Url</type>
</CustomField>