force-app/main/default/objects/Authorization__c/fields/OpportunityCreationURL__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCreationURL__c</fullName>
    <description>URL for creation of Opportunity of SAP side from Salesforce</description>
    <label>OpportunityCreationURL</label>
    <type>Url</type>
</CustomField>