force-app/main/default/objects/Authorization__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password of endpoint</description>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>