force-app/main/default/objects/Authorization__c/fields/RelatedContactCreationURL__c.field-meta.xml
<CustomField>
    <fullName>RelatedContactCreationURL__c</fullName>
    <description>URL for creation of Related Contact from Salesforce to CP in SAP</description>
    <label>RelatedContactCreationURL</label>
    <type>Url</type>
</CustomField>