force-app/main/default/objects/Authorization__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username of endpoint</description>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>